kyverno-policies/deployments/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    name: test-ns-for-testing
